--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 :root {
     --inter: "Inter", sans-serif;
+    --lato: "Lato", sans-serif;
 }
 
 .container-grid {
@@ -17,9 +19,9 @@
 
 
 header {
-    background-color: #1E52B4;
+    background-image: linear-gradient(to right bottom, #1e52b4, #1847a4, #113c95, #093186, #002777);
     padding-top: 30px;
-    height: 460px;
+   
 }
 
 .header{
@@ -27,10 +29,39 @@ header {
     justify-content: space-between;
 }
 
+.header-content {
+    display: flex;
+    flex-direction: column;
+   width: 500px;
+}
+
+.header-content-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 0;
+}
+
+.header-content h1{
+    font-family: var(--lato);
+    font-size: 28px;
+    color: white;
+    font-weight: 600;
+    padding-bottom: 15px;
+}
+
+.header-content h2{
+    font-family: var(--lato);
+    font-size: 18px;
+    color: white;
+    font-weight: 400;
+}
+
+
 .links a {
     color: white;
     text-decoration: none;
-    font-family: var(--inter);
+    font-family: var(--lato);
     font-size: 14;
 }
 
@@ -46,21 +77,230 @@ header {
     cursor: pointer;
     padding: 9px 36px 9px 36px;
     color: white;
-    font-family: var(--inter);
+    font-family: var(--lato);
     font-size: 14px;
-   border: 1px solid white;
+    border: 1px solid white;
     border-radius: 8px;
     
 }
 
+.info-box {
+    width: 75vw;
+    padding: 13px 30px;
+    background-color: white;
+    position: absolute;
+    box-shadow: 4px 4px 10px #00000015;
+    border-radius: 8px;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: space-between;
 
+}
+
+.input {
+    font-family: var(--lato);
+    border: 0px;
+    outline: none;
+    width: 157px;
+}
+
+.input-box {
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    border-right: 1px dotted black;
+}
+
+.search-button {
+    background-color: #009C3B;
+    cursor: pointer;
+    padding: 9px 36px 9px 36px;
+    color: white;
+    font-family: var(--lato);
+    font-size: 14px;
+    border: 1px solid white;
+    border-radius: 8px;
+}
 
 main {
     flex: 1;
-    background-color: yellow;
+    background-color: white;
+    padding: 75px 0px;
+}
+
+.hotel-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: 30px;
+    padding-bottom: 45px;
+}
+
+.hotel-image {
+    width: 260px;
+    height: 175px;
+    border-radius: 8px;
+    padding-bottom: 10px;
+
+}
+
+.hotel-title {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 10px;
+}
+
+.hotel-title h1 {
+    font-family: var(--lato);
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.hotel-title h2 {
+    font-family: var(--lato);
+    font-weight: 600;
+    font-size: 16px;
+    color: #FFDF00;
+}
+
+.hotel-main-descriptions-container-flex {
+    display: flex; 
+    justify-content: space-between;
+}
+
+.hotel-description {
+    width: 260px;
+    font-family: var(--lato);
+    font-size: 12px;
+}
+.hotel-main-descriptions{
+    width: 450px;
+}
+
+.hotel-main-descriptions h1 {
+    font-family: var(--lato);
+    font-weight: 800;
+    font-size: 28px;
+    padding-bottom: 30px;
+}
+
+.hotel-main-descriptions h2 {
+    font-family: var(--lato);
+    font-weight: 500;
+    font-size: 20px;
 }
 
 footer {
     flex: 1;
     background-color: red;
 }
+
+.footer-style {
+    background-image: linear-gradient(to right bottom, #009c3b, #009538);
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    color: white;
+    font-family: var(--lato);
+  }
+  
+  .footer-style > h1{
+    padding-bottom: 10px;
+  }
+  
+  .footer-style > p{
+    padding-bottom: 10px;
+  }
+  
+  .rights{
+    background-color: #FFDF00;
+    padding: 20px;
+  }
+  
+  .rights > h1 {
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    font-family: var(--lato);
+  }
+
+  @media (min-width: 0px) and (max-width: 768px) {
+    .links {
+        display: none;
+    }
+
+    .register {
+        display: none;
+    }
+
+    .header {
+        justify-content: center;
+    }
+
+    .info-box {
+        display: none;
+    }
+
+    .header-content-flex  {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
+        gap: 20px;
+    }
+
+    .header-content {
+        width: 300px;
+    }
+
+    .header-content-flex img {
+        width: 200px;
+    }
+
+    .header-content h1{
+        font-size: 18px;
+        text-align: center;
+    }
+    
+    .header-content h2{
+        font-size: 12px;
+        text-align: center;
+    }
+
+    .hotel-list {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .hotel-main-descriptions-container-flex {
+        flex-direction: column;
+        gap: 30px;
+        align-items: center;
+    }
+
+    .hotel-main-descriptions-container-flex img {
+        width: 300px;
+    }
+
+    .hotel-main-descriptions {
+        width: 300px;
+    }
+
+    .hotel-main-descriptions h1 {
+        font-size: 20px;
+        text-align: center;
+    }
+    
+    .hotel-main-descriptions h2 {
+        font-size: 12px;
+        text-align: center;
+    }
+
+    .footer-style h1 {
+        text-align: center;
+    }
+  }
+  
